# ESGNexus

./: .env.example  .gitignore  Dockerfile  README.md  banco_de_dados.md  deploy_gcp.sh  docker-compose.yml  inicializar_banco.py  iniciar_backend.py  pyproject.toml  requirements.txt  scripts_inicializar_banco_linux.sh  scripts_inicializar_banco_windows.bat  testar_funcionalidades.py  treinar_modelo.py
airflow/airflow/: README.md
backend/: .env.example  README.md  executar_backend.sh  instalar_e_executar.sh  parar_backend.sh  pom.xml  requirements.txt
backend-old/: .env  executar_backend.sh
backend-old/app/: esg_pipeline.py  ml_service.py  modelo_score_esg.joblib
backend-python/: .env  .env.example  README-atualizacao.md  README.md  docker-compose.yml  executar_backend.sh  instalar_e_executar.sh  parar_backend.sh  requirements.txt
backend-python/app/: config.py  main.py
backend/app/: database.py  main.py  modelo_score_esg.joblib  schemas.py  security.py  training_service.py
backend/modelos/: config.pkl  modelo_knn.pkl  modelo_rf.pkl
backend/scripts/: README-scripts.md  application-prod.yml  executar_backend.sh  instalar_e_executar.sh  parar_backend.sh
docs/: arquitetura_esg_nexus.html  diagrama_arquitetura_esg_nexus.html  html-to-markdown.md  instalacao.md
esg_ml/infraestrutura/: seguranca.py  (+5 more)
frontend/: README.md  app.py  executar_frontend.sh  exemplo_fornecedores.csv  instalar_e_executar_frontend.sh  package-lock.json  package.json  parar_frontend.sh  requirements.txt  tsconfig.json
frontend-old/: README.md  app.py  instalar_e_executar_frontend.sh
(+103 files in other folders)
