[project]
name = "esg-nexus-enterprise-sem-alembic"
version = "1.0.0"
description = "Aplicação ESG Nexus Enterprise com FastAPI, Streamlit, PostgreSQL/NeonDB, Airflow e MLflow, sem Alembic operacional"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "scikit-learn>=1.4",
    "joblib>=1.4",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "plotly>=5.22",
    "structlog>=24.1",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.0.1",
    "email-validator>=2.0",
    "mlflow>=2.12",
    "streamlit>=1.36",
    "streamlit-option-menu>=0.3",
    "requests>=2.32",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.11"
strict = true
